--- a/app/clientes/templates/clientes/detalhe.html
+++ b/app/clientes/templates/clientes/detalhe.html
@@ -268,7 +268,7 @@
 
         <!-- ARMAS -->
         <div class="tab-pane fade" id="armas">
-            {% include "clientes/abas/armas.html" %}
+            {% include "clientes/abas/armas.html" with context %}
         </div>
 
         <!-- COMUNICAÇÕES -->
